# contracts/openapi.json
@@ -61,6 +61,36 @@
             }
           }
         }
+      },
+      "get": {
+        "tags": [
+          "catalog"
+        ],
+        "parameters": [
+          {
+            "name": "isbn",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/CopyStatusOut"
+                  }
+                }
+              }
+            }
+          }
+        }
       }
     },
     "/catalog/search": {
@@ -326,6 +356,21 @@
           },
           "isbn": {
             "type": "string"
+          }
+        }
+      },
+      "CopyStatusOut": {
+        "required": [
+          "copy_id",
+          "on_loan"
+        ],
+        "type": "object",
+        "properties": {
+          "copy_id": {
+            "type": "string"
+          },
+          "on_loan": {
+            "type": "boolean"
           }
         }
       },
